<resources>
    <string name="app_name">99NamesOfAllah</string>
    <string name="action_settings">Settings</string>
    <string name="appBar_label">99 Names of Allah</string>
    <string name="divider_up">┏━━━━━━ ༻❁༺ ━━━━━━┓</string>
    <string name="divider_down">┗━━━━━━ ༻❁༺ ━━━━━━┛</string>
    <string name="remembrance_verse_arabic">الَّذِينَ آمَنُوا وَتَطْمَئِنُّ قُلُوبُهُم بِذِكْرِ اللَّهِ أَلَا بِذِكْرِ اللَّهِ تَطْمَئِنُّ الْقُلُوبُ (٢٨)</string>
    <string name="remembrance_verse_english">those who have believed and
        whose hearts find comfort in the remembrance of Allah.
        Indeed, in the remembrance of Allah do hearts find comfort.\n────\n(The Holy Quran, 13:28)</string>
    <string name="read_fragment_button">Read</string>
    <string name="memorize_fragment_button">Memorize</string>
    <string name="eng_name_0">Allah</string>
    <string name="eng_name_1">Ar-Rahman</string>
    <string name="eng_name_2">Ar-Raheem</string>
    <string name="eng_name_3">Al-Malik</string>
    <string name="eng_name_4">Al-Quddus</string>
    <string name="eng_name_5">As-Salam</string>
    <string name="eng_name_6">Al-Mu\'min</string>
    <string name="eng_name_7">Al-Muhaymin</string>
    <string name="eng_name_8">Al-Azeez</string>
    <string name="eng_name_9">Al-Jabbar</string>
    <string name="eng_name_10">Al-Mutakabbir</string>
    <string name="eng_name_11">Al-Khaliq</string>
    <string name="eng_name_12">Al-Bari\'</string>
    <string name="eng_name_13">Al-Musawwir</string>
    <string name="eng_name_14">Al-Ghaffar</string>
    <string name="eng_name_15">Al-Qahaar</string>
    <string name="eng_name_16">Al-Wahhab</string>
    <string name="eng_name_17">Ar-Razzaq</string>
    <string name="eng_name_18">Ar-Fattah</string>
    <string name="eng_name_19">Al-\'Aleem</string>
    <string name="eng_name_20">Al-Qabid</string>
    <string name="eng_name_21">Al-Basit</string>
    <string name="eng_name_22">Al-Khafid</string>
    <string name="eng_name_23">Ar-Rafi\'</string>
    <string name="eng_name_24">Al-Mu\'izz\'</string>
    <string name="eng_name_25">Al-Mudhill</string>
    <string name="eng_name_26">As-Samee\'</string>
    <string name="eng_name_27">Al-Baseer</string>
    <string name="eng_name_28">Al-Hakaam</string>
    <string name="eng_name_29">Al-\'Adl</string>
    <string name="eng_name_30">Al-Latif</string>
    <string name="eng_name_31">Al-Khabeer</string>
    <string name="eng_name_32">Al-Haleem</string>
    <string name="eng_name_33">Al-\'Azeem</string>
    <string name="eng_name_34">Al-Ghafur</string>
    <string name="eng_name_35">Ash-Shakur</string>
    <string name="eng_name_36">Al-\'Ali</string>
    <string name="eng_name_37">Al-Kabeer</string>
    <string name="eng_name_38">Al-Hafiz</string>
    <string name="eng_name_39">Al-Muqeet</string>
    <string name="eng_name_40">Al-Haseeb</string>
    <string name="eng_name_41">Al-Jaleel</string>
    <string name="eng_name_42">Al-Kareem</string>
    <string name="eng_name_43">Ar-Raqeeb</string>
    <string name="eng_name_44">Al-Mujeeb</string>
    <string name="eng_name_45">Al-Waasi\'</string>
    <string name="eng_name_46">Al-Hakeem</string>
    <string name="eng_name_47">Al-Wadud</string>
    <string name="eng_name_48">Al-Majeed</string>
    <string name="eng_name_49">Al-Ba\'ith</string>
    <string name="eng_name_50">Ash-Shaheed</string>
    <string name="eng_name_51">Al-Haqq</string>
    <string name="eng_name_52">Al-Wakeel</string>
    <string name="eng_name_53">Al-Qawiyy</string>
    <string name="eng_name_54">Al-Mateen</string>
    <string name="eng_name_55">Al-Waliyy</string>
    <string name="eng_name_56">Al-Hameed</string>
    <string name="eng_name_57">Al-Muhsee</string>
    <string name="eng_name_58">Al-Mubdi</string>
    <string name="eng_name_59">Al-Mu\'id</string>
    <string name="eng_name_60">Al-Muhyee</string>
    <string name="eng_name_61">Al-Mumeet</string>
    <string name="eng_name_62">Al-Hayy</string>
    <string name="eng_name_63">Al-Qayyum</string>
    <string name="eng_name_64">Al-Wajid</string>
    <string name="eng_name_65">Al-Majid</string>
    <string name="eng_name_66">Al-Wahid</string>
    <string name="eng_name_67">Al-Ahad</string>
    <string name="eng_name_68">As-Samad</string>
    <string name="eng_name_69">Al-Qadir</string>
    <string name="eng_name_70">Al-Muqtadir</string>
    <string name="eng_name_71">Al-Muqaddim</string>
    <string name="eng_name_72">Al-Mu\'akkhir</string>
    <string name="eng_name_73">Al-Awwal</string>
    <string name="eng_name_74">Al-Akhir</string>
    <string name="eng_name_75">Az-Zahir</string>
    <string name="eng_name_76">Al-Batin</string>
    <string name="eng_name_77">Al-Wali</string>
    <string name="eng_name_78">Al-Muta\'ali</string>
    <string name="eng_name_79">Al-Barr</string>
    <string name="eng_name_80">At-Tawwab</string>
    <string name="eng_name_81">Al-Muntaqim</string>
    <string name="eng_name_82">Al-\'Afuww</string>
    <string name="eng_name_83">Ar-Ra\'uf</string>
    <string name="eng_name_84">Malik al Mulk</string>
    <string name="eng_name_85">Dhul-Jalal-wal-Ikram</string>
    <string name="eng_name_86">Al-Muqsit</string>
    <string name="eng_name_87">Al-Jami\'</string>
    <string name="eng_name_88">Al-Ghani</string>
    <string name="eng_name_89">Al-Mughni</string>
    <string name="eng_name_90">Al-Mani\'</string>
    <string name="eng_name_91">Ad-Darr</string>
    <string name="eng_name_92">An-Nafi\'</string>
    <string name="eng_name_93">An-Nur</string>
    <string name="eng_name_94">Al-Hadi</string>
    <string name="eng_name_95">Al-Badi\'</string>
    <string name="eng_name_96">Al-Baqi</string>
    <string name="eng_name_97">Al-Warith</string>
    <string name="eng_name_98">Ar-Rasheed</string>
    <string name="eng_name_99">As-Saboor</string>
    <string name="arab_name_0">الله</string>
    <string name="arab_name_1">اَلرَّحْمَان</string>
    <string name="arab_name_2">اَلرَّحِيم</string>
    <string name="arab_name_3">اَلْمَلِك</string>
    <string name="arab_name_4">اَلْقُدُّوس</string>
    <string name="arab_name_5">اَلسَّلَام</string>
    <string name="arab_name_6">اَلْمُؤْمِن</string>
    <string name="arab_name_7">اَلْمُهَيْمِن</string>
    <string name="arab_name_8">اَلْعَزِيز</string>
    <string name="arab_name_9">اَلْجَبَّار</string>
    <string name="arab_name_10">اَلْمُتَكَبِّر</string>
    <string name="arab_name_11">اَلْخَالِق</string>
    <string name="arab_name_12">اَلْبَارِئ</string>
    <string name="arab_name_13">اَلْمُصَوِّر</string>
    <string name="arab_name_14">اَلْغَفَّار</string>
    <string name="arab_name_15">اَلْقَهَّار</string>
    <string name="arab_name_16">اَلْوَهَّاب</string>
    <string name="arab_name_17">اَلرَّزَّاق</string>
    <string name="arab_name_18">اَلْفَتَّاح</string>
    <string name="arab_name_19">اَلْعَلِيم</string>
    <string name="arab_name_20">اَلْقَابِض</string>
    <string name="arab_name_21">اَلْبَاسِط</string>
    <string name="arab_name_22">اَلْخَافِض</string>
    <string name="arab_name_23">اَلرَّافِع</string>
    <string name="arab_name_24">اَلْمُعِزّ</string>
    <string name="arab_name_25">اَلْمُذِلّ</string>
    <string name="arab_name_26">اَلسَّمِيع</string>
    <string name="arab_name_27">اَلْبَصِير</string>
    <string name="arab_name_28">اَلْحَكَم</string>
    <string name="arab_name_29">اَلْعَدْل</string>
    <string name="arab_name_30">اَللَّطِيف</string>
    <string name="arab_name_31">اَلْخَبِير</string>
    <string name="arab_name_32">اَلْحَلِيم</string>
    <string name="arab_name_33">اَلْعَظِيم</string>
    <string name="arab_name_34">اَلْغَفُور</string>
    <string name="arab_name_35">اَلشَّكُور</string>
    <string name="arab_name_36">اَلْعَلِي</string>
    <string name="arab_name_37">اَلْكَبِير</string>
    <string name="arab_name_38">اَلْحَفِيظ</string>
    <string name="arab_name_39">اَلْمُقِيت</string>
    <string name="arab_name_40">اَلْحَسِيب</string>
    <string name="arab_name_41">اَلْجَلِيل</string>
    <string name="arab_name_42">اَلْكَرِيم</string>
    <string name="arab_name_43">اَلرَّقِيب</string>
    <string name="arab_name_44">اَلْمُجِيب</string>
    <string name="arab_name_45">اَلْوَاسِع</string>
    <string name="arab_name_46">اَلْحَكِيم</string>
    <string name="arab_name_47">اَلْوَدُود</string>
    <string name="arab_name_48">اَلْمَجِيد</string>
    <string name="arab_name_49">اَلْبَاعِث</string>
    <string name="arab_name_50">اَلشَّهِيد</string>
    <string name="arab_name_51">اَلْحَق</string>
    <string name="arab_name_52">اَلْوَكِيل</string>
    <string name="arab_name_53">اَلْقَوِيّ</string>
    <string name="arab_name_54">اَلْمَتِينّ</string>
    <string name="arab_name_55">اَلْوَلِيّّ</string>
    <string name="arab_name_56">اَلْحَمِيدّّ</string>
    <string name="arab_name_57">اَلْمُحْصِيّّ</string>
    <string name="arab_name_58">اَلْمُبْدِئّّ</string>
    <string name="arab_name_59">اَلْمُعِيد</string>
    <string name="arab_name_60">اَلْمُحْيِي</string>
    <string name="arab_name_61">اَلْمُمِيت</string>
    <string name="arab_name_62">اَلْحَي</string>
    <string name="arab_name_63">اَلْقَيُّوم</string>
    <string name="arab_name_64">اَلْوَاجِد</string>
    <string name="arab_name_65">اَلْمَاجِد</string>
    <string name="arab_name_66">اَلْوَاحِد</string>
    <string name="arab_name_67">اَلْأَحَد</string>
    <string name="arab_name_68">اَلصَّمَد</string>
    <string name="arab_name_69">اَلْقَادِر</string>
    <string name="arab_name_70">اَلْمُقْتَدِر</string>
    <string name="arab_name_71">اَلْمُقَدِّم</string>
    <string name="arab_name_72">اَلْمُؤَخِّر</string>
    <string name="arab_name_73">اَلْأَوَّل</string>
    <string name="arab_name_74">اَلْأَخِر</string>
    <string name="arab_name_75">اَلظَّاهِر</string>
    <string name="arab_name_76">اَلْبَاطِن</string>
    <string name="arab_name_77">اَلْوَالِي</string>
    <string name="arab_name_78">اَلْمُتَعَالِي</string>
    <string name="arab_name_79">اَلْبَرّ</string>
    <string name="arab_name_80">اَلتَّوَّابّ</string>
    <string name="arab_name_81">اَلْمُنْتَقِمّ</string>
    <string name="arab_name_82">اَلْعَفُوّ</string>
    <string name="arab_name_83">اَلرَّؤُوفّ</string>
    <string name="arab_name_84">مَالِك الْمُلْك</string>
    <string name="arab_name_85">ذُو ٱلْجَلَالِ وَٱلْإِكْرَام</string>
    <string name="arab_name_86">اَلْمُقْسِط</string>
    <string name="arab_name_87">اَلْجَامِع</string>
    <string name="arab_name_88">اَلْغَنِيّ</string>
    <string name="arab_name_89">ااَلْمُغْنِيّ</string>
    <string name="arab_name_90">اَلْمَانِع</string>
    <string name="arab_name_91">اَلضَّار</string>
    <string name="arab_name_92">اَلنَّافِع</string>
    <string name="arab_name_93">اَلنُّور</string>
    <string name="arab_name_94">اَلْهَادِي</string>
    <string name="arab_name_95">اَلْبَدِيع</string>
    <string name="arab_name_96">اَلْبَاقِي</string>
    <string name="arab_name_97">اَلْوَارِث</string>
    <string name="arab_name_98">اَلرَّشِيد</string>
    <string name="arab_name_99">اَلصَّبُور</string>
    <string name="meaning_0">The Greatest Name</string>
    <string name="meaning_1">The Most Gracious</string>
    <string name="meaning_2">The Most Merciful</string>
    <string name="meaning_3">The Absolute Ruler</string>
    <string name="meaning_4">The Most Pure</string>
    <string name="meaning_5">The Source of Peace</string>
    <string name="meaning_6">The Inspirer of Faith</string>
    <string name="meaning_7">The Protector</string>
    <string name="meaning_8">The Mighty One</string>
    <string name="meaning_9">The Compeller</string>
    <string name="meaning_10">The Supreme</string>
    <string name="meaning_11">The Creator</string>
    <string name="meaning_12">The Evolver</string>
    <string name="meaning_13">The Fashioner</string>
    <string name="meaning_14">The Most Forgiving</string>
    <string name="meaning_15">The All-Prevailing One</string>
</resources>