<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/divider_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:text="@string/divider_up"
        android:textAlignment="center"
        android:textColor="@color/blue_700" />

    <TextView
        android:id="@+id/quran_verse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twenty_dp"
        android:text="@string/remembrance_verse_arabic"
        android:textAlignment="center"
        android:textColor="@color/blue_500" />

    <TextView
        android:id="@+id/divider_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:text="@string/divider_down"
        android:textAlignment="center"
        android:textColor="@color/blue_700" />

    <TextView
        android:id="@+id/quran_verse_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_marginEnd="@dimen/twenty_dp"
        android:layout_marginBottom="@dimen/forty_dp"
        android:text="@string/remembrance_verse_english"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/read_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_marginEnd="@dimen/twenty_dp"
        android:text="@string/read_fragment_button"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/memorize_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_marginEnd="@dimen/twenty_dp"
        android:text="@string/memorize_fragment_button"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
</LinearLayout>
</ScrollView>